--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "Этот проект был создан при помощи Parcel. Для знакомства и настройки\r дополнительных возможностей [обратись к документации](https://parceljs.org/).",
-  "homepage": "https://github.com/tim-mate/js-8.git",
+  "homepage": "https://github.com/tim-mate/js-tasks-8.git",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /js-8/"
+    "build": "parcel build src/*.html --public-url /js-tasks-8/"
   },
   "repository": {
     "type": "git",
