--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "//https://tim-mate.github.io/js-tasks-8/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /js-tasks-8/"
+    "build": "parcel build src/*.html --public-url ./dist/"
   },
   "repository": {
     "type": "git",
